--- a/shopping_list/app/templates/index.html
+++ b/shopping_list/app/templates/index.html
@@ -1,34 +1,19 @@
-<!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../static/css/shopping_list.css" />
-    <title>Shopping List</title>    
-  </head>
-<body>
-  
-  <h1>Account Log in</h1>
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<script type="text/javascript" src="../static/js/jquery-3.2.1.min.js"></script>	
+		<script type="text/javascript" src="../static/js/shopping_list.js"></script>
+		<link rel="stylesheet" type="text/css" href="../static/css/shopping_list.css" />
 
-	<form action="new-user.php" style="border:1px solid">
-
-		<div class="container">
-			
-  			
-			<label><b>Email</b></label><br>
-			<input type="text" name="email" value="Enter email" required>
-  			<br>  			
-			<label><b>Password</b></label><br>
-			<input type="password" name="password" value="Enter Password" required>
-			<br>    			
-			<br>
-  			<input type="button" value="Log in" onclick="window.open('dashboard', '_blank');">
-			<p>New user?<a href="createAccount">Create account</a>.</p>
-		</div>
-	</form> 
-
-	<body>	
-
-</body>
+		<title>Welcome to Shoppe</title>
+		
+	</head>
+	<body>
+		<div><a href="/index">Home</a> <a href="/login">Login</a></div>
+		<hr>
+				<h1>Welcome</h1>
+						
+	</body>
 </html>
