ft #151469426 html & css for the dashboard page

--- a/shopping_list/app/templates/index.html
+++ b/shopping_list/app/templates/index.html
@@ -13,7 +13,7 @@
 	<body>
 		<div><a href="/index">Home</a> <a href="/login">Login</a></div>
 		<hr>
-				<h1>Welcome</h1>
+				<h1>Shopping List App - Welcome!</h1>
 						
 	</body>
 </html>
